--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -10,7 +10,9 @@
       <mat-form-field>
         <input matInput type="password" placeholder="Jelszó">
       </mat-form-field>
-    
+
+      
+      <button mat-button color="primary" class="maxwidth" (click)="loginWithGoogle()">Login With google!</button>
     
       <button mat-raised-button color="primary" type="submit" class="maxwidth">Bejelentkezés</button>
       <p class="center">Nem vagy még tag? <a routerLink="/registration">Regisztrálj</a></p>
