--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,8 +2,14 @@
   <span routerLink="" style="cursor:pointer">Fake News</span>
   <span class="spacer"></span>
 
-  <div class="button-row">
+  <div *ngIf="isUserLoggedIn == false" class="button-row">
       <button mat-button routerLink="/registration"> <mat-icon>person_add</mat-icon>&nbsp;Regisztráció</button>
       <button mat-button routerLink="/login"> <mat-icon>person</mat-icon>&nbsp;Bejelentkezés</button>
   </div>
+
+  <div *ngIf="isUserLoggedIn == true" class="button-row">
+    <span>Üdv, {{local.get('email')}}</span>
+    <button mat-button (click)="logout()" ><mat-icon>exit_to_app</mat-icon>&nbsp;Kijelentkezés</button>
+</div>
+
 </mat-toolbar>
