hírek listázása hozzáadva

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,6 @@
 <mat-toolbar class="maxwidth" color="primary">
   <span routerLink="" style="cursor:pointer">Fake News</span>
+  <span routerLink="newslist" >&nbsp; List News</span>
   <span class="spacer"></span>
 
   <div *ngIf="isUserLoggedIn == false" class="button-row">
