--- a/src/app/newslistitem/newslistitem.component.css
+++ b/src/app/newslistitem/newslistitem.component.css
@@ -22,3 +22,14 @@
     height: auto;
     max-height: 300px;
   }
+  a {
+    color: #0060B6;
+    text-decoration: none;
+}
+
+a:hover 
+{
+     color:#00A0C6; 
+     text-decoration:none; 
+     cursor:pointer;  
+}
