--- a/src/app/newslistitem/newslistitem.component.html
+++ b/src/app/newslistitem/newslistitem.component.html
@@ -1,18 +1,21 @@
 <div class="box">
   <mat-card class="example-card">
-    <mat-card-header>
-      <mat-card-title>{{news.title}}</mat-card-title>
-      <mat-card-subtitle>{{news.author}}</mat-card-subtitle>
-    </mat-card-header>
-    <img mat-card-image src="{{news.urlToImage}}">
-    <mat-card-content>
-      <p>
-        {{news.description}}
-      </p>
-    </mat-card-content>
+    <a href="{{news.url}}">
+      <mat-card-header>
+        <mat-card-title>{{news.title}}</mat-card-title>
+        <mat-card-subtitle>{{news.author}}</mat-card-subtitle>
+      </mat-card-header>
+      <img mat-card-image src="{{news.urlToImage}}">
+      <mat-card-content>
+        <p>
+          {{news.description}}
+        </p>
+      </mat-card-content>
+    </a>
     <mat-card-actions>
       <button mat-button>LIKE</button>
       <button mat-button>SHARE</button>
     </mat-card-actions>
   </mat-card>
 </div>
+<app-news-list-item-detail *ngIf="clicked" [detailed]="news"></app-news-list-item-detail>
