--- a/src/app/favourite-list-item/favourite-list-item.component.html
+++ b/src/app/favourite-list-item/favourite-list-item.component.html
@@ -13,7 +13,7 @@
         </mat-card-content>
       </a>
       <mat-card-actions>
-        <button mat-raised-button color="warn" *ngIf="isFavourite == false" (click)="favouriteClicked()"><mat-icon>favorite_border</mat-icon> Remove from favorites</button>
+        <button mat-raised-button color="warn" *ngIf="isFavourite == false" (click)="unfavoriteClicked()"><mat-icon>favorite_border</mat-icon> Remove from favorites</button>
       </mat-card-actions>
     </mat-card>
   </div>
