--- a/src/app/newslist/newslist.component.html
+++ b/src/app/newslist/newslist.component.html
@@ -1,5 +1,5 @@
 <div>
-    <div class="wrapper" *ngIf="newsArrived">
+    <div class="wrapper" >
         <div *ngFor="let news of myNews" class="center">
             <app-newslistitem [news]="news"></app-newslistitem>
         </div>
