--- a/src/app/favorite-list/favorite-list.component.html
+++ b/src/app/favorite-list/favorite-list.component.html
@@ -1,7 +1,7 @@
 <div>
     <div class="wrapper" *ngIf="newsArrived">
         <div *ngFor="let news of myNews" class="center">
-            <app-newslistitem [news]="news"></app-newslistitem>
+            <app-favourite-list-item [news]="news"></app-favourite-list-item>
         </div>
     </div>
 </div>
