production build OK

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,5 +1,5 @@
 <mat-tab-group (selectedTabChange)="getLocalNews($event)">
-    <mat-tab (click)="asd()" label="Top headlines from the US"><app-newslist [myNews]="localNews" ></app-newslist></mat-tab>
+    <mat-tab label="Top headlines from the US"><app-newslist [myNews]="localNews" ></app-newslist></mat-tab>
     <mat-tab label="Top headlines from Hungary"><app-newslist  [myNews]="localNews"></app-newslist></mat-tab>
     <mat-tab label="Top headlines from the UK"><app-newslist  [myNews]="localNews"></app-newslist></mat-tab>
     <mat-tab label="Top headlines from Russia"><app-newslist  [myNews]="localNews"></app-newslist></mat-tab>
