--- a/src/app/favourite-list-item/favourite-list-item.component.html
+++ b/src/app/favourite-list-item/favourite-list-item.component.html
@@ -13,7 +13,7 @@
       </mat-card-content>
     </a>
     <mat-card-actions>
-      <button mat-raised-button (click)="favouriteClicked()" color="primary">
+      <button mat-raised-button color="primary">
         <mat-icon color="warn">favorite</mat-icon> Kedvenc
       </button>
       <button mat-raised-button (click)="removeFavourite()" color="warn">
